--- a/GeoAnswer/app/src/main/AndroidManifest.xml
+++ b/GeoAnswer/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
+    <!-- KAD TODO change icon?????-->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -29,8 +30,8 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".MainActivity"
-            android:label="activity_main">
+            android:name=".QuestionViewActivity"
+            android:label="@string/title_activity_question_view">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
