--- a/GeoAnswer/app/src/main/AndroidManifest.xml
+++ b/GeoAnswer/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
 
         <activity
             android:name=".MainActivity"
-            android:label="MainActivity">
+            android:label="GeoAnswer">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
